# project_shared

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml
.github/workflows/: build.yml
client/: CMakeLists.txt  SmartHomeMonitorClient.pro  app_icon.rc  client_theme.h  main.cpp  main_window.cpp  main_window.h  protocol_client.cpp  protocol_client.h  resources.qrc  video_decoder.cpp  video_decoder.h
conf/: server.conf  server.memory.conf
database/: 001_users.sql  002_recordings.sql  003_cameras.sql
deploy/: docker-compose.nfs.yml  server.docker.conf  smart-home-monitor.service
include/smart_home/: auth_protocol.hpp  auth_service.hpp  camera_api.hpp  camera_device_protocol.hpp  camera_protocol.hpp  camera_repository.hpp  configuration.hpp  hls_auth.hpp  hls_http_server.hpp  logger.hpp  md5.hpp  media_stream.hpp  media_wire.hpp  mysql_camera_repository.hpp  mysql_recording_repository.hpp  mysql_user_repository.hpp  playback_protocol.hpp  recording.hpp  recording_maintenance.hpp  recording_manager.hpp  ring_buffer.hpp  segment_recorder.hpp  stream_protocol.hpp  tcp_server.hpp  thread_pool.hpp  tlv.hpp  user_repository.hpp
src/: auth_protocol.cpp  auth_service.cpp  camera_api.cpp  camera_device_protocol.cpp  camera_protocol.cpp  camera_repository.cpp  configuration.cpp  curl_http_client.cpp  ffmpeg_media_source.cpp  ffmpeg_ts_writer.cpp  hls_auth.cpp  hls_http_server.cpp  logger.cpp  main.cpp  md5.cpp  media_stream.cpp  media_wire.cpp  mysql_camera_repository.cpp  mysql_recording_repository.cpp  mysql_user_repository.cpp  playback_protocol.cpp  recording.cpp  recording_maintenance.cpp  recording_manager.cpp  segment_recorder.cpp  socket_http_client.cpp  stream_protocol.cpp  tcp_server.cpp  thread_pool.cpp  tlv.cpp  user_repository.cpp
tests/: auth_service_tests.cpp  camera_api_tests.cpp  camera_repository_tests.cpp  configuration_tests.cpp  hls_http_server_tests.cpp  http_client_tests.cpp  media_stream_tests.cpp  media_wire_tests.cpp  recording_maintenance_tests.cpp  recording_manager_tests.cpp  recording_tests.cpp  ring_buffer_tests.cpp  segment_recorder_tests.cpp  tcp_server_tests.cpp  thread_pool_tests.cpp  tlv_tests.cpp
